Hack a fix to wrong width on FF

--- a/src/app/event-sidebar-desktop/event-sidebar-desktop.component.css
+++ b/src/app/event-sidebar-desktop/event-sidebar-desktop.component.css
@@ -23,7 +23,7 @@
         top: 64px;
         height: calc(100vh - 64px);
         width: calc(100vw - 240px - (100vw - 240px) / 2);
-        overflow-y: auto;
+        overflow-y: scroll;
         position: fixed;
         border-left: 2px solid lightgray;
     }
